Align menu correctly

--- a/Criollo Web/Public/default.styl
+++ b/Criollo Web/Public/default.styl
@@ -144,13 +144,13 @@ body
     transition background-color 0.25s ease-in-out
 
     .content
-      width 80%
-      max-width 960px
-      padding 1em 0
+      // width 80%
+      // max-width 960px
+      padding 1em
       text-align left
 
       @media screen and (max-width: phone-cutoff)
-        padding 0.5em 0
+        padding 0.5em 1em
 
       .logo
         display none
